attempted fix for iphone

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@ body {
 
 	  /* Disables pull-to-refresh and overscroll glow effects. */
 	  overscroll-behavior-y: none;
+	  overflow: hidden;
 }
 
 a {
