added  more modes

--- a/src/views/About.scss
+++ b/src/views/About.scss
@@ -1,4 +1,4 @@
-.browser-only, .standalone-only {
+.mode {
     display: none;
 }
 
@@ -10,6 +10,24 @@
 
 @media (display-mode: standalone) {
     .standalone-only {
+      display: block
+    }
+}
+
+@media (display-mode: fullscreen) {
+    .fullscreen {
+      display: block
+    }
+}
+
+@media (display-mode: minimal-ui) {
+    .minimal-ui {
+      display: block
+    }
+}
+
+@media (display-mode: window-controls-overlay) {
+    .window-controls-overlay {
       display: block
     }
 }
