--- a/src/index.scss
+++ b/src/index.scss
@@ -9,8 +9,8 @@ html {
 
 body {
 	font-size: 16px;
-	color: white;
-	background-color: #282c34;
+	color: black;
+	background-color: #bcbfc5;
 
 	  /* Disables pull-to-refresh and overscroll glow effects. */
 	  overscroll-behavior-y: none;
