--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,11 @@
 // @import 'fonts';
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,800');
 
-html {
-	min-height: calc(100% + env(safe-area-inset-top));
-	padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+// html {
+// 	min-height: calc(100% + env(safe-area-inset-top));
+// 	padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 
-  }
+//   }
 
 body {
 	font-size: 16px;
