another removal ios

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
-body {
-  padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
-    env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
-}
+// body {
+//   padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
+//     env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
+// }
 .App {
   font: {
     size: 1em;
